# expected_task

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml
lib/: CMakeLists.txt
lib/expected_task/: expected_operators.hpp  expected_optional_bridge.hpp  expected_task.hpp  expected_task_operators.hpp  optional_operators.hpp  when_all.hpp
unit_tests/: CMakeLists.txt  test_chaining_returning_tasks.cpp  test_expectedtask.cpp  test_high_order_functions.cpp  test_make_unexpected.cpp  test_operators.cpp  test_traits.cpp  test_void_return_management.cpp  test_when_all.cpp  utilities.hpp
